Fixed datatable column sorting controls overlapping with text at low resolutions

--- a/views/scss/inc/_datatable.scss
+++ b/views/scss/inc/_datatable.scss
@@ -70,6 +70,7 @@ table.datatable{
         .sortable, .sorted {
             cursor: pointer;
             position: relative;
+            padding-right: 20px;
             &:after{
                 @include tao-icon-setup;
                 position: absolute;
